# space-game

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE.bazel  nixpkgs.nix  shell.nix  watch.sh
assets/: flyby.avi  screen1.tga
common/: BUILD.bazel
common/data/: BUILD.bazel  resources.bzl
common/data/cegui/: Login.layout  SciFiLook.imageset  SciFiLook.looknfeel
common/data/cegui/datafiles/fonts/: bluebold.fontdef
common/data/cegui/datafiles/imagesets/: SciFiLook.tga
common/data/cegui/datafiles/layouts/: HUD.layout
common/data/cegui/datafiles/schemes/: SciFiLook.scheme
common/data/cegui/layouts/: HUD.layout  Login.layout
common/data/config/: Makefile  ogre.cfg  plugins.cfg
common/data/maps/: BUILD.bazel  Makefile  maps.bzl
common/data/maps/base01/: base01.blend  base01.blend1  base01.tga  base01_tileset.xcf
common/data/maps/base02/: base02.blend  base02.blend1  base02.tga
common/data/maps/base03/: base03.blend  base03.blend1  base03.collision.xml  base03.material  base03.mesh.xml  dome_inside.tga  floor_1.tga  metal_grid.tga  testgrid_512.tga  wall.tga  wall.xcf
common/data/maps/blend03/: blend03.blend  blend03.blend1
common/data/materials/: Makefile  backdrop.material  particlefx.material
common/data/objects/rocket01/: rocket01.blend  rocket01.blend1
common/data/particles/: Makefile  effects.particle
common/data/ships/: BUILD.bazel  Makefile
common/data/ships/bomber/: base.tga  bomber.blend  bomber.blend1  bomber.material  bomber.mesh.xml  bomber.tga
common/data/ships/spider/: base.tga  spider.blend  spider.blend1  spider.material  spider.mesh.xml  spider.tga
common/data/ships/warbird/: base.tga  warbird.blend  warbird.blend1  warbird.material  warbird.mesh.xml  warbird.tga
common/data/textures/: base1.tga  base2.tga  base4.tga  ceil1.tga  ceil2.tga  ceil3.tga  exhaus.tga  floor4.tga  floor5_alpha.tga  modular1.tga  modular5.tga  sci_fidoor.tga  starfield_overlay1.tga  starfield_overlay2.tga  starfield_overlay3.tga  trim1.tga  trim4.tga  wall1.tga  wall4.tga  wall_1.tga
common/src/: .gitignore  BUILD.bazel
common/src/client/: .cxxflags  .ldflags  .linklibs  .linkname  cache.cpp  cache.hpp  chat.cpp  chat.hpp  client.cpp  console.cpp  console.hpp  graphics.cpp  graphics.hpp  hud.cpp  hud.hpp  icon.rc  input.cpp  input.hpp  login.cpp  login.hpp  network.cpp  network.hpp  sim.cpp  sim.hpp  visobject.cpp  visobject.hpp
common/src/core/: .cxxflags  .install  .linkname  Makefile  core.hpp  exception.hpp  log.cpp  log.hpp  quaternion.hpp  timer.cpp  timer.hpp
common/src/math/: .linkname  interp.hpp  prim.cpp  prim.hpp  vecmath.hpp  volumes.cpp  volumes.hpp
common/src/net/: .install  .linkname  Makefile  compress.hpp  msg.cpp  msg.hpp  net.cpp  net.hpp  net.spec  protocol.cpp  protocol.hpp
common/src/physics/: .cxxflags  .linkname  collision.cpp  collision.hpp  kdtree.cpp  kdtree.hpp  missile.cpp  missile.hpp  object.cpp  object.hpp  physunits.hpp  quadtree.hpp  ship.cpp  ship.hpp  sim.cpp  sim.hpp
common/src/script/: .install  .linkname  Makefile  luaextlib.cpp  luaextlib.hpp  luaobject.cpp  luaobject.hpp  luautil.cpp  luautil.hpp  script.hpp
common/src/server/: .ldflags  .linklibs  .linkname  Makefile  autolock.hpp  canvas.cpp  canvas.hpp  colour.hpp  concurrency.cpp  concurrency.hpp  control.cpp  control.hpp  daemon.cpp  daemon.hpp  drawbmp.cpp  drawbmp.hpp  fifo.cpp  fifo.hpp  idle.cpp  idle.hpp  kdtree.cpp  kdtree.hpp  localstore.hpp  lock.hpp  logging.cpp  logging.hpp  logmsg.cpp  logmsg.hpp  luarpc.hpp  mailbox.cpp  mailbox.hpp  messages.cpp  messages.hpp  msg.spec  msghandler.cpp  msghandler.hpp  msgjob.cpp  msgjob.hpp  network.cpp  network.hpp  (+21 more)
common/src/sim/: .install  .linkname  object.cpp  object.hpp  sim.cpp  sim.hpp
common/src/zonebuild/: .cxxflags  .linklibs  .linkname  zonebuild.cpp
mingw/: .gitignore
scripts/: BUILD.bazel  blacklist.mk  build-deps.sh  code-gen.inc  cp-dll-depends.sh  create-git-ignore-files.sh  create-patch.sh  deprules.mk  distrib.sh  enum-resources.sh  extract-packages.sh  filter-out.mk  gen-make.sh  generic.mk  lua.mk  mmo_collision_exporter.py  mmo_level_exporter.py  msg-gen.sh  net-gen.sh  packages.mk  run-client.sh  style.xsl  uv_face_collapse.py
