workspace(name = "space-game")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "io_tweag_rules_nixpkgs",
    sha256 = "b01f170580f646ee3cde1ea4c117d00e561afaf3c59eda604cf09194a824ff10",
    strip_prefix = "rules_nixpkgs-0.9.0",
    urls = ["https://github.com/tweag/rules_nixpkgs/archive/v0.9.0.tar.gz"],
)

load("@io_tweag_rules_nixpkgs//nixpkgs:repositories.bzl", "rules_nixpkgs_dependencies")

rules_nixpkgs_dependencies()


load("@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl", "nixpkgs_cc_configure")

nixpkgs_cc_configure(
    name = "nixpkgs_config_cc",
    repository = "@nixpkgs",
)



load("@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl", "nixpkgs_git_repository", "nixpkgs_package")

nixpkgs_git_repository(
    name = "nixpkgs",
    revision = "22.05",
    sha256 = "0f8c25433a6611fa5664797cd049c80faefec91575718794c701f3b033f2db01",
)

nixpkgs_package(
    name = "argtable",
    build_file_content = """\
load("@rules_cc//cc:defs.bzl", "cc_import")
cc_import(
    name = "argtable-import",
    hdrs = glob(["include/**/*.h"]),
    shared_library = "lib/libargtable3.so",
    visibility = ["//visibility:public"],
)
cc_library(
    name = "argtable",
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    deps = [":argtable-import"],
    visibility = ["//visibility:public"],
)
""",
    repository = "@nixpkgs",
)

nixpkgs_package(
    name = "boost",
    attribute_path = "boost155.dev",
    build_file_content = """\
cc_library(
    name = "boost",
    hdrs = glob(["include/**/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
)
""",
    repository = "@nixpkgs",
)

nixpkgs_package(
    name = "enet",
    build_file_content = """\
load("@rules_cc//cc:defs.bzl", "cc_import")
cc_import(
    name = "enet-import",
    hdrs = glob(["include/**/*.h"]),
    shared_library = "lib/libenet.so",
    visibility = ["//visibility:public"],
)
cc_library(
    name = "enet",
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    deps = [":enet-import"],
    visibility = ["//visibility:public"],
)
""",
    repository = "@nixpkgs",
)


nixpkgs_package(
    name = "lua",
    attribute_path = "lua5_1",
    build_file_content = """\
load("@rules_cc//cc:defs.bzl", "cc_import")
cc_import(
    name = "lua-import",
    hdrs = glob(["include/**/*.h"]),
    shared_library = "lib/liblua.so",
    visibility = ["//visibility:public"],
)
cc_library(
    name = "lua",
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    deps = [":lua-import"],
    visibility = ["//visibility:public"],
)
""",
    repository = "@nixpkgs",
)


#http_archive(
#    name = "rules_cc",
#    urls = ["https://github.com/bazelbuild/rules_cc/releases/download/0.0.2/rules_cc-0.0.2.tar.gz"],
#    sha256 = "58bff40957ace85c2de21ebfc72e53ed3a0d33af8cc20abd0ceec55c63be7de2",
#)
#
#load("@rules_cc//cc:repositories.bzl", "rules_cc_dependencies", "rules_cc_toolchains")
#
#rules_cc_dependencies()
#
#rules_cc_toolchains()
