load("@bazel_skylib//rules:write_file.bzl", "write_file")

write_file(
    name = "write-run-server-sh",
    out = "run-server.sh",
    content = [
        "set -eux",
        "common/src/server",
    ]
)

sh_binary(
    name = "run-server",
    srcs = [":run-server.sh"],
    data = [
        "//common/data/maps:base03.dat",
        "//common/src:server",
    ],
)

write_file(
    name = "write-run-client-sh",
    out = "run-client.sh",
    content = [
        "set -eux",
        "cp -f common/data/config/*.cfg ./",
        "sed -i \"s|^PluginFolder=.*|PluginFolder=$1|\" plugins.cfg",
        "scripts/enum-resources.sh ./ | tee resources.cfg",
        "ln -sf resources.cfg resources_d.cfg",
        "ln -sf plugins.cfg plugins_d.cfg",
        "/nix/store/bwk12qa17hgwm4b27c5ia840xqwqr8hm-nixGLIntel/bin/nixGLIntel common/src/client",
    ]
)

sh_binary(
    name = "run-client",
    srcs = [":run-client.sh"],
    data = [
        "//common/data/maps:base03.dat",
        "//common/data/maps:base03.zip",
        "//common/data/ships:bomber.zip",
        "//common/data/ships:spider.zip",
        "//common/data/ships:warbird.zip",
        "//common/data:cegui",
        "//common/data:config",
        "//common/data:materials.zip",
        "//common/data:particles.zip",
        "//common/data:textures.zip",
        "//common/src:client",
        "//scripts:enum-resources.sh",
        "@ogre//:lib/OGRE",
    ],
    args = [
        "$(location @ogre//:lib/OGRE)"
    ],
)
