load("@rules_pkg//pkg:zip.bzl", "pkg_zip")

pkg_zip(
    name = "materials-zip",
    out = "materials.zip",
    strip_prefix = "materials",
    srcs = glob(["materials/*.material"]),
    visibility = ["//visibility:public"],
)

pkg_zip(
    name = "particles-zip",
    out = "particles.zip",
    strip_prefix = "particles",
    srcs = glob(["particles/*.particle"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "cegui",
    srcs = glob(["cegui/**/*"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "config",
    srcs = glob(["config/*"]),
    visibility = ["//visibility:public"],
)
