load("@rules_pkg//pkg:zip.bzl", "pkg_zip")

pkg_zip(
    name = "materials-zip",
    out = "materials.zip",
    strip_prefix = "materials",
    srcs = glob(["materials/*.material"]),
    visibility = ["//visibility:public"],
)

pkg_zip(
    name = "textures-zip",
    out = "textures.zip",
    strip_prefix = "textures",
    srcs = glob(["textures/*.tga"]),
    visibility = ["//visibility:public"],
)

pkg_zip(
    name = "particles-zip",
    out = "particles.zip",
    strip_prefix = "particles",
    srcs = glob(["particles/*.particle"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "cegui",
    srcs = glob([
        "cegui/fonts/*",
        "cegui/imagesets/*",
        "cegui/layouts/*.layout",
        "cegui/looknfeel/*.looknfeel",
        "cegui/schemes/*.scheme",
    ]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "config",
    srcs = glob(["config/*"]),
    visibility = ["//visibility:public"],
)
