cc_library(
    name = "core",
    srcs = glob(["core/*.hpp", "core/*.cpp"]),
    hdrs = glob(["core/*.hpp"]),
    visibility = ["//visibility:public"],
    includes = ["."],
)

cc_library(
    name = "math",
    srcs = glob(["math/*.hpp", "math/*.cpp"]),
    hdrs = glob(["math/*.hpp"]),
    visibility = ["//visibility:public"],
    includes = ["."],
)

cc_library(
    name = "physics",
    srcs = glob(["physics/*.hpp", "physics/*.cpp"]),
    hdrs = glob(["physics/*.hpp"]),
    deps = [
        "//common/src:core",
        "//common/src:math",
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "net",
    srcs = glob(["net/*.hpp", "net/*.cpp"]),
    hdrs = glob(["net/*.hpp"]),
    deps = [
        "//common/src:core",
        "@enet",
    ],
    visibility = ["//visibility:public"],
    includes = ["."],
)
