cc_library(
    name = "core",
    hdrs = glob(["core/*.hpp"]),
    srcs = glob(["core/*.hpp", "core/*.cpp"]),
    visibility = ["//visibility:public"],
    includes = ["."],
)

cc_library(
    name = "math",
    hdrs = glob(["math/*.hpp"]),
    srcs = glob(["math/*.hpp", "math/*.cpp"]),
    visibility = ["//visibility:public"],
    includes = ["."],
)

cc_library(
    name = "net",
    hdrs = glob(["net/*.hpp"]),
    srcs = glob(["net/*.hpp", "net/*.cpp"]),
    deps = [
        "//common/src:core",
        "@boost",
        "@enet",
    ],
    visibility = ["//visibility:public"],
    includes = ["."],
)

cc_library(
    name = "physics",
    hdrs = glob(["physics/*.hpp"]),
    srcs = glob(["physics/*.hpp", "physics/*.cpp"]),
    deps = [
        "//common/src:core",
        "//common/src:math",
    ],
    visibility = ["//visibility:public"],
    includes = ["."],
)

cc_library(
    name = "script",
    hdrs = glob(["script/*.hpp"]),
    srcs = glob(["script/*.hpp", "script/*.cpp"]),
    deps = [
        "//common/src:core",
        "//common/src:math",
        "@lua",
    ],
    visibility = ["//visibility:public"],
    includes = ["."],
)

cc_binary(
    name = "server",
    srcs = glob(["server/*.hpp", "server/*.cpp"]),
    deps = [
        "//common/src:core",
        "//common/src:net",
        "//common/src:physics",
        "//common/src:script",
        "@argtable",
        "@lua",
    ],
    visibility = ["//visibility:public"],
    includes = ["."],
)

cc_binary(
    name = "zonebuild",
    srcs = glob(["zonebuild/*.hpp", "zonebuild/*.cpp"]),
    deps = [
        "//common/src:core",
        "//common/src:physics",
        "@expat",
    ],
    visibility = ["//visibility:public"],
    includes = ["."],
)
